--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,20 +2,21 @@
 name = "tauri-plugin-sql"
 version = "0.0.0"
 description = "Interface with SQL databases."
-authors.workspace = true
-license.workspace = true
-edition.workspace = true
-#rust-version.workspace = true
+authors = [ "Tauri Programme within The Commons Conservancy", "fatherbrennan" ]
+license = "Apache-2.0 OR MIT"
+edition = "2021"
+#rust-version = "1.64"
 rust-version = "1.65"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde.workspace = true
-serde_json.workspace = true
-tauri.workspace = true
-log.workspace = true
-thiserror.workspace = true
+serde = { version = "1", features = ["derive"] }
+log = "0.4"
+tauri = "1"
+tauri-build = "1"
+serde_json = "1"
+thiserror = "1"
 futures-core = "0.3"
 sqlx = { version = "0.7", features = ["json", "time"] }
 time = "0.3"
